<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_favourite"
        android:title="@string/favourite"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_border_black_24dp"/>

    <item
        android:id="@+id/action_menu"
        android:title="@string/menu"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_fast_food_menu"/>

    <item
        android:id="@+id/action_delivery"
        android:title="@string/delivery"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_delivery"/>

</menu>