<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uz.androidmk.fooddelivery.ui.delivery.DeliveryFragment">

    <!--<ImageView-->
    <!--android:id="@+id/right_above"-->
    <!--android:layout_width="67dp"-->
    <!--android:layout_height="77dp"-->
    <!--android:layout_marginEnd="64dp"-->
    <!--android:layout_marginTop="128dp"-->
    <!--android:src="@drawable/line"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent" />-->

    <LinearLayout
        android:id="@+id/linear_placed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:layout_marginRight="8dp">

        <ImageView
            android:id="@+id/delivery_img_placed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/delivery_circular"
            android:padding="12dp"
            android:src="@drawable/d_double_tick" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:lottie_autoPlay="false"
            app:lottie_fileName="ripple.json"
            app:lottie_loop="true"
            android:visibility="gone"/>

        <uz.androidmk.fooddelivery.Utils.RobotoBold
            android:id="@+id/txt_order_placed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/order_placed"
            android:textColor="@color/textMainColor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_cooking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.532">

        <ImageView
            android:id="@+id/delivery_img_preparing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/delivery_circular"
            android:padding="12dp"
            android:src="@drawable/d_cooking_awesome" />

        <uz.androidmk.fooddelivery.Utils.RobotoBold
            android:id="@+id/txt_preparing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/preparing"
            android:textColor="@color/textMainColor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="72dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <ImageView
            android:id="@+id/delivery_img_dispatching"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/delivery_circular"
            android:padding="12dp"
            android:src="@drawable/d_delivery" />

        <uz.androidmk.fooddelivery.Utils.RobotoBold
            android:id="@+id/txt_dispatching"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/dispatched"
            android:textColor="@color/textMainColor" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="54dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.616">

        <ImageView
            android:id="@+id/delivery_img_delivered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/delivery_circular"
            android:padding="12dp"
            android:src="@drawable/d_homepage" />

        <uz.androidmk.fooddelivery.Utils.RobotoBold
            android:id="@+id/txt_delivered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/delivered"
            android:textColor="@color/textMainColor" />
    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</android.support.constraint.ConstraintLayout>
